button commentaires is position fixed (avoiding bug on small screens

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1206,7 +1206,7 @@ input.jq-ui-forms {
 }
 
 .button-comments {
-  position: absolute;
+  position: fixed;
   
   left: 0px;
   width: 100%;
